<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_monitor_ros</name>
  <version>0.1.0</version>
  <description>Monitoring CPU, Memory and Processes</description>

  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>
  <maintainer email="tanja@auterion.com">Tanja Baumann</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosbag2</depend>
  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>

  <depend>launch</depend>
  <depend>launch_testing</depend>
  <depend>launch_testing_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
