<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_monitor_ros</name>
  <version>0.3.0</version>
  <description>Monitoring CPU, Memory and Processes</description>

  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <author email="jalim@ethz.ch">Jaeyoung Lim</author>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>launch</depend>
  <depend>px4_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
